--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,7 +42,7 @@
             </label>
 
           </div>
-          <button type="submit" class="btn btn-default">Salvar</button>
+          <button type="button" id="botao" class="btn btn-default">Salvar</button>
         </form>
         </div>
       
